--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "@react-navigation/stack": "^5.0.3",
     "@sentry/react-native": "^2.4.3",
     "eventemitter3": "^4.0.0",
-    "firebase-admin": "^9.10.0",
     "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react-native": "^0.64.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-linear-gradient": "^2.5.6",
