--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-firebase/app": "^12.1.0",
+    "@react-native-firebase/database": "^12.1.0",
     "@react-native-firebase/firestore": "^12.1.0",
     "@react-navigation/native": "^5.0.3",
     "@react-navigation/stack": "^5.0.3",
