--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-nfc-rewriter",
   "version": "0.0.1",
   "private": true,
-  "revAppId": "com.revteltech.nfcopenrewriter",
+  "revAppId": "com.waveauth",
   "revSentryDsn": "https://0821dcc21de3434ea88aa3900f348a51@o760853.ingest.sentry.io/5792943",
   "scripts": {
     "android": "react-native run-android",
