--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-firebase/app": "^12.1.0",
     "@react-native-firebase/database": "^12.1.0",
